# repository5

./: README.md  algoPractical1.txt
CYK/: CMakeLists.txt
CYK/include/: CYK.h  Interface.h  Rule.h  Transformer.h
CYK/src/: CYK.cpp  Interface.cpp  Rule.cpp  Transformer.cpp  main.cpp
CYK/tests/: bad_rules_tests.cpp  interface_tests.cpp  sample_tests.cpp
Earley/: CMakeLists.txt  create.sh  remove.sh
Earley/include/: Configuration.h  Earley.h  Interface.h  Rule.h
Earley/src/: Configuration.cpp  Earley.cpp  Interface.cpp  Rule.cpp  main.cpp
Earley/tests/: ans_interface_test1  interface_tests.cpp  sample_tests.cpp
Practical1/: CMakeLists.txt  алгоритм.odt
Practical1/include/: Interface.h
Practical1/src/: Interface.cpp  main.cpp
Practical1/tests/: error_tests.cpp  func_for_tests.cpp  func_for_tests.h  normal_tests.cpp  sample_tests.cpp
RegularSolver/: Builder.cpp  Builder.h  BuilderPDKA.cpp  BuilderPDKA.h  CMakeLists.txt  Cleaner.cpp  Cleaner.h  Collector.cpp  GraphChecker.cpp  Minimizer.h  Parser.cpp  RegularExpression.cpp  RegularExpression.h  RepresenterPDKA.cpp  basic_classes.cpp  basic_classes.h  main.cpp
RegularSolver/include/: Collector.h  GraphChecker.h  Interface.h  Minimizer.h  Parser.h  RegularExpression.h  RepresenterNKA.h  RepresenterPDKA.h  basic_classes.h
RegularSolver/src/: Builder.cpp  BuilderPDKA.cpp  Collector.cpp  Interface.cpp  Minimizer.cpp  RegularExpression.cpp  RepresenterNKA.cpp  basic_classes.cpp
RegularSolver/test/: test_complement.cpp  test_complex.cpp  test_equality.cpp
